@@ -46,7 +46,7 @@
 inline
 int vsnprintf(char *s1, size_t n, const char *s2, va_list v)
 {
-	return _STLP_VENDOR_CSTD::_vsnprintf(s1, n, s2, v);
+	return _vsnprintf(s1, n, s2, v);
 }
 #  endif
 
