@@ -100,11 +100,11 @@ struct _STL_math_proxy {
 #  define _STLP_DO_TAN(_Tp)   _STLP_VENDOR_CSTD::tan
 #  define _STLP_DO_TANH(_Tp)  _STLP_VENDOR_CSTD::tanh
 #  define _STLP_DO_EXP(_Tp)   _STLP_VENDOR_CSTD::exp
-# if defined (__GNUC__) || defined ( __IBMCPP__ ) || defined (__SUNPRO_CC) || defined (__HP_aCC)
+// # if defined (__GNUC__) || defined ( __IBMCPP__ ) || defined (__SUNPRO_CC) || defined (__HP_aCC)
 #  define _STLP_DO_HYPOT(_Tp) ::hypot
-# else
-#  define _STLP_DO_HYPOT(_Tp) _STLP_VENDOR_CSTD::hypot
-# endif
+// # else
+// #  define _STLP_DO_HYPOT(_Tp) _STLP_VENDOR_CSTD::hypot
+// # endif
 
 # endif
 
